--- a/README.mb
+++ b/README.mb
@@ -15,7 +15,7 @@ The app will not be operational just a test development to learn how the back-en
 - SQLite3
 - HTML
 - CSS
-- JavaScript
-- Wordpress
+- Jinja
+-JavaScript
 
 Thanks for checking on my work and hope my project can be of use to you.
